--- a/docs/知识星球.md
+++ b/docs/知识星球.md
@@ -1,56 +1,99 @@
-**大家好，我是不才陈某~**
+陈某除了每天分享一些免费的知识干货外也有一个知识付费的私密圈子：**知识星球**，已经运营了半年之久，截止目前沉淀了**9个专栏**，全部都是从基础、实战、源码相结合的行文方式，一站式Java后端进阶教程。
 
-熟悉我的读者都知道陈某的经历，曾经任职蚂蚁金服P8，近十年的后端工作经验，对于微服务、高并发、大数据处理有着丰富的经验，无论是人生经历还是工作经验个人觉得都还不错；目前同朋友一起在医疗方面创业中，人生就要多折腾........
+最早优惠定价是79，随着新的专栏加入目前已经涨至了129元，上周在星球中加入了**精尽RocketMQ**这个专栏，同时也在不断更新，Kafka、云原生的专栏已经在准备了，**每加入一个专栏都会上涨，早加入更优惠**。
 
-## 公众号中写了什么
+> **星球中即将加入精尽Kafka专栏，即将涨价，这是最后一波优惠券，只有20张，数量有限，文末扫码领取**
 
-目前在公众号中分享了三个专栏，分别如下：
+星球中目前已经有**520+**位同学加入，**对于星球中内容的一致好评**，这里简单晒出几位同学的好评截图：
 
-1. **Spring Cloud Alibaba 进阶**：[点击前往阅读](https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzU3MDAzNDg1MA==&action=getalbum&album_id=2042874937312346114#wechat_redirect)
-2. **Spring Boot 进阶** ：[点击前往阅读](https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzU3MDAzNDg1MA==&action=getalbum&album_id=1532834475389288449#wechat_redirect)
-3. **Mybatis 进阶** ：[点击前往阅读](https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzU3MDAzNDg1MA==&action=getalbum&album_id=1500819225232343046#wechat_redirect)
-4. **ShardingSphere 进阶**：[点击前往阅读](https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzU3MDAzNDg1MA==&action=getalbum&album_id=2389616635193393153#wechat_redirect)
+![](https://img.java-family.cn/202305132041132.png)
 
-## 什么是知识星球？
+![](https://img.java-family.cn/202305132041103.png)
 
-星球里面最有价值的是链接，首先是我跟大家的链接，最重要得是链接大家一群人。大家彼此认识，建立关系。
-
-没有筛选的社群，没有价值；筛选门槛越高的社群，越有价值。200 多元的价格，确实是不错的筛选门槛，愿意付费的人，他一定会有某些特质，你想多认识了解一下。通过筛选出相对靠谱的人之后，为圈友创造各种链接场景，如：
-
-- 【人脉对接】专人对接、技术聚会、快闪群、圈友内推，资源免费对接
-- 【线下活动】饭局的诱惑、同城见面会、垂直主题闭门会、技术大咖俱乐部、读书活动等
-
-## 在星球内部你可以做什么？
-
-1. 在星球内部可以不限次数向陈某提问，咨询学习中的问题
-2. 免费学习陈某的**精品视频教程**，目前有如下两个：
-   1. **《Spring Cloud Alibaba 实战项目》**：https://sourl.cn/72X9JV
-   2. **《亿级数据分库分表实战》**`更新中`：https://sourl.cn/U9pKj4
-
-## 后续星球内部更新什么内容？
-
-后续还会更新其他专栏视频，比如**MQ**、**云原生**、**架构**方面，当然也会定期在内部分享一些**面试题**、**面试经验**。
-
-总之星球内部都是优秀的人，和优秀的人打交道没坏处，学习的更多。
-
-> 随着新视频专栏的加入，价格也会随之提高，先前加入的可以免费观看。
+![](https://img.java-family.cn/202305132041084.png)
 
 
 
-## 如何加入星球？
+## 新增内容
+
+1、新增了《精尽RocketMQ》专栏，从基础环境搭建到案例整合、源码介绍，目录如下：
+
+![](https://img.java-family.cn/20230513204102image-20230513204102288.png)
 
 
 
-扫描下方二维码加入
+2、新增了简历编写、大厂面试真题，Java全栈高清路线图：
+
+![](https://img.java-family.cn/20230513204049image-20230513204049193.png)
+
+## 星球介绍
+
+给大家介绍一下星球中专栏，除了上面的RocketMQ专栏，还有8个专栏，如下：
+
+## 1. 我要进大厂
+
+《我要进大厂》这个专栏主要更新总结高频面试题和实战总结，目前更新了58篇文章，如下图：
+
+![](https://img.java-family.cn/20230513204041image-20230513204041391.png)
+
+## 2. 亿级数据分库分表实战
+
+《亿级数据分库分表实战》这个专栏是**视频+图文**的形式，介绍了企业开发中分库分表的实操，内容如下图：
+
+![](https://img.java-family.cn/20230513204033image-20230513204032887.png)
+
+## 3. DDD 微服务落地实战
+
+DDD 微服务落地实战这个专栏介绍了DDD指导微服务落地的实操，代码案例+企业级场景，内容如下图：
+
+![](https://img.java-family.cn/20230513204025image-20230513204024841.png)
+
+## 4. 架构实战
+
+架构实战这个专栏目前正在星球更新中，目前更新了10篇文章，每周都会更新，内容如下：
+
+![](https://img.java-family.cn/2023051320401910.jpg)
+
+## 5. 精尽 Spring Security 
+
+精尽 Spring Security 这个专栏从单体+微服务+原理，真实场景，代码演示，一站式Spring Security 进阶专栏，内容缩略如下图：
+
+![](https://img.java-family.cn/20230513204011image-20230513204011114.png)
+
+## 6. 精尽 Spring Cloud Alibaba 
+
+精尽 Spring Cloud Alibaba 这个专栏结合案例源码详细的介绍了Cloud Alibaba的各种组件以及组件源码，内容如下图：
+
+![](https://img.java-family.cn/20230513204002image-20230513204002291.png)
+
+## 7.  精尽 Spring Boot
+
+精尽Spring Boot 这个专栏从基础+实战+源码详细的介绍Spring Boot 企业级应用，总计52篇文章，由于文章篇幅限制，贴出源码部分内容：
+
+![](https://img.java-family.cn/202305132039538.png)
+
+## 8. 精尽 Spring
+
+精尽 Spring这个专栏从底层到源码，总计72篇文章，由于文章篇幅限制，贴出部分源码内容：
+
+![](https://img.java-family.cn/202305132039509.png)
+
+## 星球其他福利
+
+加入星球除了学习陈某的专栏，还有以下福利：
+
+1. 简历修改：可以将你的面试简历私发修改
+2. 咨询问题：可以在星球中提问或者微信咨询技术问题，不限次数
+3. 定时送书：星球中会定时送些技术书籍
 
 
 
-![6b21eec117f32b085f6504edb752699](https://img.java-family.cn/20220608154410.jpg)
+## 如何加入？
 
+目前星球原价129，陈某申请了20张优20元的优惠券，先到先得，用完就没了，折算下来109元，每天2毛钱，一顿饭钱，但是收获却是巨大，有需要扫描下方二维码加入。
 
+![](https://img.java-family.cn/202305132039211.png)
 
-加入成功后，请添加陈某微信获取视频地址和学习资料：
+优惠券抢完了，想要的同学可以原价订阅，扫描下方二维码加入
 
-![](https://img.java-family.cn/木谷博客/36.jpg)
-
-> 如果前期购买过陈某视频的，请直接私信我，减去视频的费用
+![](https://img.java-family.cn/20230513203941image-20230513203940675.png)
